Fixed In the magazine section spacing

--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ img {
 }
 
 .big-logo img {
-  width: 120%;
+  width: 100%;
 }
 
 .fa-user {
@@ -274,6 +274,15 @@ img {
   width: 30px;
   color: white;
   background-color: red;
+}
+
+.all-features {
+  height: 300px;
+}
+
+.all-features img {
+  width: 100%;
+  height: 90%;
 }
 
 .all-features-text:hover {
